samples/_failures_safe/1761513170_3f4925_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15fab4f0.c: In function ‘main’:
./samples/SAFE/__tmp_15fab4f0.c:144: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_15fab4f0.c:143:9: error: expected declaration or statement at end of input
  143 |         if
      |         ^~
./samples/SAFE/__tmp_15fab4f0.c:143:9: error: expected declaration or statement at end of input
